--- a/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/layout/_footer.scss
+++ b/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/layout/_footer.scss
@@ -7,12 +7,33 @@ footer {
     display: flex !important;
     flex-direction: column !important;
     justify-content: center !important;
-    padding: 29px 5.85% !important;
+    padding-block: clamp(2rem, 5.85vw, 2.9rem) !important;
+    padding-inline: clamp(2rem, 5.85vw, 2.3rem) !important;
     gap: 1rem !important;
     background-color: $color-accent-blue !important;
     color: $color-white !important;
     font-size: $font-size-xs !important;
     max-width: none !important;
+
+    @include respond(xs) {
+        padding-inline: clamp(2.3rem, 5.85vw, 3.2rem) !important;
+        padding-block: clamp(2.9rem, 5.85vw, 3.2rem) !important;
+    }
+
+    @include respond(md) {
+        padding-inline: clamp(3.5rem, 8vw, 7.3rem) !important;
+        padding-block: clamp(3.5rem, 8vw, 4.2rem) !important;
+    }
+
+    @include respond(lg) {
+        padding-inline: clamp(8rem, 10vw, 13rem) !important;
+        padding-block: clamp(4.2rem, 10vw, 6rem) !important;
+    }
+
+    @include respond(xl) {
+        padding-inline: clamp(16rem, 11vw, 18rem) !important;
+        padding-block: clamp(4.2rem, 11vw, 5rem) !important;
+    }
 
     section {
         padding: 0 !important;
@@ -21,11 +42,6 @@ footer {
     a {
         color: $color-white !important;
         text-decoration: none !important;
-    }
-
-    @include respond(md) {
-        padding: 42px 12.5% !important;
-        font-size: $font-size-xs !important;
     }
 }
 
@@ -124,6 +140,7 @@ footer {
 .copyright-links {
     display: flex !important;
     flex-wrap: wrap !important;
+    justify-content: space-between !important;
     align-items: center !important;
     margin: 0.32rem 0 !important;
     gap: 0.5rem !important;
