--- a/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/pages/_about.scss
+++ b/WP-OhMyFood/app/public/wp-content/themes/oh-my-food/scss/pages/_about.scss
@@ -5,8 +5,7 @@
 .about-intro {
     display: flex !important;
     flex-direction: column !important;
-    margin-top: 1.2rem !important;
-    gap: 3.5rem !important;
+    gap: 1.5rem !important;
 
 
     @include respond(md) {
@@ -22,7 +21,10 @@
 .image-wrapper {
     display: flex;
     justify-content: center;
-    margin-bottom: $spacing-lg;
+
+    @include respond(md) {
+        margin-bottom: $spacing-lg;
+    }
 }
 
 .image-about {
@@ -40,7 +42,7 @@
     display: flex;
     flex-direction: column;
     gap: $spacing-lg;
-    padding: $spacing-lg 0;
+    padding: $spacing-lg 0 0;
 
     strong {
         font-weight: $font-weight-medium !important;
